--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "mocha": "^2.2.4"
   }
 }
