--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "test/run_tests.rb"
+    "test": "test/run_tests.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/robenkleene/bullets",
   "devDependencies": {
+    "chai": "^2.3.0",
     "grunt": "~0.4.2",
     "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
