--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "0.0.1",
   "description": "A simple JavaScript library to give outliner functionality to an HTML document.",
   "main": "bullets.js",
-  "directories": {
-    "example": "example",
-    "test": "test"
-  },
   "scripts": {
-    "test": "test/run_tests.js"
+    "test": "test/scripts/run_tests.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +18,8 @@
   "homepage": "https://github.com/robenkleene/bullets",
   "devDependencies": {
     "chai": "^2.3.0",
+    "gulp": "^3.8.11",
+    "gulp-jade": "^1.0.0",
     "mocha": "^2.2.4",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0"
