--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "glob": "^5.0.5",
     "gulp": "^3.8.11",
     "gulp-jade": "^1.0.0",
+    "gulp-plumber": "^1.0.0",
     "mocha": "^2.2.4",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0",
